--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <title> Prechu</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/icons/animation.css">
+        <link rel="stylesheet" href="css/icons/fontello-codes.css">
+        <link rel="stylesheet" href="css/icons/fontello-embedded.css">
+        <link rel="stylesheet" href="css/icons/fontello-ie7-codes.css">
+        <link rel="stylesheet" href="css/icons/fontello-ie7.css">
+        <link rel="stylesheet" href="css/icons/fontello.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -33,7 +39,29 @@
             </div>
         </header>
         <main>
-
+            <section class="section section-hero">
+                <div class="background">
+                    <img src="image/dsfsdfsdfds@2X.png">
+                </div>
+                <div class="foreground">
+                    <div class="row">
+                        <div class="col col-40-sm">
+                            <figure class="hero-image">
+                                <img src="image/iphone@2X.png" alt="mobile">
+                            </figure>
+                        </div>
+                        <div class="col col-60-sm">
+                            <div class="hero-title">Lorem Ipsum is simply </div>
+                            <div class="hero-description">dummy text of the <br>
+                                    printing & typesetting </div>
+                            <div class="button">
+                                <i class="icon-ok-circled"></i>
+                                Sign up now
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
 
