--- a/index.html
+++ b/index.html
@@ -62,6 +62,68 @@
                     </div>
                 </div>
             </section>
+            <section class="section section-card">
+                <div class="row">
+                    <div class="col col-card-sm col-card">
+                        <div class="card card-mobile card-pc">
+                            <div class="card-image card-image-pencil">
+                                <i class="icon icon-pencil"></i>
+                            </div>
+                            <div class="card-info">
+                                <div class="card-title">Contrary to popular</div>
+                                <div class="card-desc">Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-card-sm col-card">
+                        <div class="card card-mobile card-pc">
+                            <div class="card-image card-image-desktop">
+                                <i class="icon icon-desktop"></i>
+                            </div>
+                            <div class="card-info">
+                                <div class="card-title">Contrary to popular</div>
+                                <div class="card-desc">Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-card-sm col-card">
+                        <div class="card card-mobile card-pc">
+                            <div class="card-image card-image-basket">
+                                <i class=" icon icon-shopping-basket"></i>
+                            </div>
+                            <div class="card-info">
+                                <div class="card-title">Contrary to popular</div>
+                                <div class="card-desc">Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section section-shopping">
+                <div class="section-title">The Shopping cart</div>
+                <div class="row">
+                    <div class="col col-shopping-sm col-shopping">
+                        <div class="shopping-header">
+                            <figure class="shopping-image">
+                                <img src="image/cart@2X.png">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="col col-shopping-sm col-shopping">
+                        <div class="card-title card-shopping-title">Some Bullet text here</div>
+                        <ul class="card-desc card-shopping-desc">
+                            <li>Lorem Ipsum is simply dummy text of the printing and typesetting </li>
+                            <li>Lorem Ipsum has been the industry's standard dummy text ever</li> 
+                            <li>When an unknown printer took a galley of type and scrambled </li>
+                            <li>It to make a type specimen book. It has survived not only five centuries</li>
+                            <li>But also the leap into electronic typesetting,</li>
+                            <li>Remaining essentially unchanged. It was popularised</li> 
+                            <li>The release of Letraset sheets containing Lorem Ipsum passages</li>
+                        </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
 
