--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </section>
         </main>
         <footer>
-
+            <div class="copyright">Copyright © 2012-2013 cssauthor.com</div>
         </footer>
     </body>
 </html>
