--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 </div>
                 <div class="foreground">
                     <div class="row">
-                        <div class="col col-40-sm">
+                        <div class="col col-40-sm col-40">
                             <figure class="hero-image">
                                 <img src="image/iphone@2X.png" alt="mobile">
                             </figure>
                         </div>
-                        <div class="col col-60-sm">
+                        <div class="col col-60-sm col-60">
                             <div class="hero-title">Lorem Ipsum is simply </div>
                             <div class="hero-description">dummy text of the <br>
                                     printing & typesetting </div>
@@ -102,14 +102,14 @@
             <section class="section section-shopping">
                 <div class="section-title">The Shopping cart</div>
                 <div class="row">
-                    <div class="col col-shopping-sm col-shopping">
+                    <div class="col col-shopping-sm col-shopping-40">
                         <div class="shopping-header">
                             <figure class="shopping-image">
                                 <img src="image/cart@2X.png">
                             </figure>
                         </div>
                     </div>
-                    <div class="col col-shopping-sm col-shopping">
+                    <div class="col col-shopping-sm col-shopping-60">
                         <div class="card-title card-shopping-title">Some Bullet text here</div>
                         <ul class="card-desc card-shopping-desc">
                             <li>Lorem Ipsum is simply dummy text of the printing and typesetting </li>
