--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <main>
             <section class="section section-hero">
                 <div class="background">
-                    <img src="image/dsfsdfsdfds@2X.png">
+                    <img src="image/dsfsdfsdfds@2X.png" alt='black'>
                 </div>
                 <div class="foreground">
                     <div class="row">
@@ -102,14 +102,14 @@
             <section class="section section-shopping">
                 <div class="section-title">The Shopping cart</div>
                 <div class="row">
-                    <div class="col col-shopping-sm col-shopping-40">
+                    <div class="col col-shopping-sm col-shopping">
                         <div class="shopping-header">
                             <figure class="shopping-image">
-                                <img src="image/cart@2X.png">
+                                <img src="image/cart@2X.png" alt="basket">
                             </figure>
                         </div>
                     </div>
-                    <div class="col col-shopping-sm col-shopping-60">
+                    <div class="col col-shopping-sm col-shopping">
                         <div class="card-title card-shopping-title">Some Bullet text here</div>
                         <ul class="card-desc card-shopping-desc">
                             <li>Lorem Ipsum is simply dummy text of the printing and typesetting </li>
@@ -120,8 +120,7 @@
                             <li>Remaining essentially unchanged. It was popularised</li> 
                             <li>The release of Letraset sheets containing Lorem Ipsum passages</li>
                         </ul>
-                        </div>
-                    </div>
+                    </div>  
                 </div>
             </section>
         </main>
