--- a/index.html
+++ b/index.html
@@ -44,19 +44,23 @@
                     <img src="image/dsfsdfsdfds@2X.png" alt='black'>
                 </div>
                 <div class="foreground">
-                    <div class="row">
-                        <div class="col col-40-sm col-40">
-                            <figure class="hero-image">
-                                <img src="image/iphone@2X.png" alt="mobile">
-                            </figure>
-                        </div>
-                        <div class="col col-60-sm col-60">
-                            <div class="hero-title">Lorem Ipsum is simply </div>
-                            <div class="hero-description">dummy text of the <br>
-                                    printing & typesetting </div>
-                            <div class="button">
-                                <i class="icon-ok-circled"></i>
-                                Sign up now
+                    <div class="container hero-container">
+                        <div class="row">
+                            <div class="col col-xs col-40-sm col-40">
+                                <figure class="hero-image">
+                                    <img src="image/iphone@2X.png" alt="mobile">
+                                </figure>
+                            </div>
+                            <div class="col col-xs col-60-sm col-60">
+                                <div class="hero-text">
+                                    <div class="hero-title">Lorem Ipsum is simply </div>
+                                    <div class="hero-description">dummy text of the <br>
+                                            printing & typesetting </div>
+                                    <div class="button">
+                                        <i class="icon-ok-circled"></i>
+                                        Sign up now
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +69,7 @@
             <section class="section section-card">
                 <div class="row">
                     <div class="col col-card-sm col-card">
-                        <div class="card card-mobile card-pc">
+                        <div class="card  card-mobile-xs card-mobile card-pc">
                             <div class="card-image card-image-pencil">
                                 <i class="icon icon-pencil"></i>
                             </div>
@@ -76,7 +80,7 @@
                         </div>
                     </div>
                     <div class="col col-card-sm col-card">
-                        <div class="card card-mobile card-pc">
+                        <div class="card card-mobile-xs card-mobile card-pc">
                             <div class="card-image card-image-desktop">
                                 <i class="icon icon-desktop"></i>
                             </div>
@@ -87,7 +91,7 @@
                         </div>
                     </div>
                     <div class="col col-card-sm col-card">
-                        <div class="card card-mobile card-pc">
+                        <div class="card card-mobile-xs card-mobile card-pc">
                             <div class="card-image card-image-basket">
                                 <i class=" icon icon-shopping-basket"></i>
                             </div>
