--- a/index.html
+++ b/index.html
@@ -94,15 +94,7 @@
                             <!-- Add Arrows -->
                             <div class="swiper-button-next"></div>
                             <div class="swiper-button-prev"></div>
-                        </div>
-
-
-
-
-
-
-
-                       
+                        </div> 
                     </div>
                 </div>
             </section>
@@ -176,16 +168,8 @@
 			  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
 			  crossorigin="anonymous"></script>
               <script src="js/swiper.min.js"></script>
+              <script src="js/main.js"></script>
 
-              <!-- Initialize Swiper -->
-              <script>
-                var swiper = new Swiper('.swiper-container', {
-                  navigation: {
-                    nextEl: '.swiper-button-next',
-                    prevEl: '.swiper-button-prev',
-                  },
-                });
-              </script>
            
     </body>
 </html>
