--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
                             <li class="menu-items"><a href="">Contacts</a></li>
                         </ul>
                     </nav>
-                    <div class="blue-menu">
-                        <div class="blue-menu-item"></div>
-                        <div class="blue-menu-item"></div>
-                        <div class="blue-menu-item"></div>
-                    </div>
+                    <nav  class="burger-menu">
+                        <a href="#" class="nav-toggle"></a>
+                        <ul>
+                        <li class="burger-menu-item"><a href="">Home</a></li>
+                        <li class="burger-menu-item"><a href="">Products</a></li>
+                        <li class="burger-menu-item"><a href="">Services</a></li>
+                        <li class="burger-menu-item"><a href="">Contacts</a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </header>
@@ -157,7 +161,7 @@
                                 <li>Lorem Ipsum has been the industry's standard dummy text ever</li> 
                                 <li>When an unknown printer took a galley of type and scrambled </li>
                                 <li>It to make a type specimen book. It has survived not only five centuries</li>
-                                <li>But also the leap into electronic typesetting,</li>
+                                <li> But also the leap into electronic typesetting </li>
                                 <li>Remaining essentially unchanged. It was popularised</li> 
                                 <li>The release of Letraset sheets containing Lorem Ipsum passages</li>
                             </ul>
