--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                 <div class="container hero-container">
                     <div class="background">
                         <img src="image/dsfsdfsdfds@2X.png" alt='black'>
+                        <div class="triangle">
+                        </div>
                     </div>
                     <div class="foreground">
-                    
                             <div class="swiper-container">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
@@ -155,10 +156,10 @@
                 <section class="section section-hero">
                         <div class="container hero-container">
                             <div class="background">
-                                <img src="image/[2qfdklf0]Geometryminimalistic-1366x768.jpg" alt='black'>
+                                <img src="image/Geometryminimalistic-1366x768.jpg" alt='black'>
                             </div>
                             <div class="foreground">
-                                <div class="fotorama">
+                                <div class="fotorama" data-width="900" data-max-width="100%">
                                     <div class="row">
                                         <div class="col col-xs col-40-sm col-40">
                                             <figure class="hero-image">
@@ -204,7 +205,7 @@
                         <div class="col col-card-sm col-card">
                             <div class="card  card-mobile-xs card-mobile card-pc">
                                 <div class="card-image card-image-pencil">
-                                    <img  class="icon icon-pencil" src="image/Shape_3.png">
+                                    <img  class="icon icon-pencil" src="image/Shape_3.png" alt="pencil">
                                 </div>
                                 <div class="card-info">
                                     <div class="card-title">Contrary to popular</div>
@@ -215,7 +216,7 @@
                         <div class="col col-card-sm col-card">
                             <div class="card card-mobile-xs card-mobile card-pc">
                                 <div class="card-image card-image-desktop">
-                                    <img  class="icon icon-desktop" src="image/Shape_6.png">
+                                    <img  class="icon icon-desktop" src="image/Shape_6.png" alt="desktop">
                                 </div>
                                 <div class="card-info">
                                     <div class="card-title">Contrary to popular</div>
@@ -226,7 +227,7 @@
                         <div class="col col-card-sm col-card">
                             <div class="card card-mobile-xs card-mobile card-pc">
                                 <div class="card-image card-image-basket">
-                                    <img  class="icon icon-basket" src="image/Shape_5.png">
+                                    <img  class="icon icon-basket" src="image/Shape_5.png" alt="basket">
                                 </div>
                                 <div class="card-info">
                                     <div class="card-title">Contrary to popular</div>
