--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-title">Contrary to popular</div>
-                                    <div class="card-desc">Lorem Ipsum is not simply random text.It <br>has roots in a piece </div>
+                                    <div class="card-desc">Lorem Ipsum is not simply random text.It has roots in a piece </div>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-title">Contrary to popular</div>
-                                    <div class="card-desc">Lorem Ipsum is not simply random text.  It <br> has roots in a piece </div>
+                                    <div class="card-desc">Lorem Ipsum is not simply random text.  It  has roots in a piece </div>
                                 </div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-title">Contrary to popular</div>
-                                    <div class="card-desc">Lorem Ipsum is not simply random text. It <br>has roots in a piece </div>
+                                    <div class="card-desc">Lorem Ipsum is not simply random text. It has roots in a piece </div>
                                 </div>
                             </div>
                         </div>
