--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                 <img src="image/Geometryminimalistic-1366x768.jpg" alt='black'>
                             </div>
                             <div class="foreground">
-                                <div class="fotorama" data-width="900" data-max-width="100%">
+                                <div class="fotorama" data-width="900" data-max-width="100%" data-height="80%">
                                     <div class="row">
                                         <div class="col col-xs col-40-sm col-40">
                                             <figure class="hero-image">
