--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                                             </div>
                                             <div class="col col-xs col-60-sm col-60">
                                                 <div class="hero-text">
-                                                    <div class="hero-title">Lorem Ipsum is simply </div>
-                                                    <div class="hero-description">dummy text of the <br>
+                                                    <div class="hero-title">Mobile from the USA </div>
+                                                    <div class="hero-description">dummy text of the 
                                                             printing & typesetting </div>
                                                     <div class="button">
                                                         <i class="icon-ok-circled"></i>
@@ -81,13 +81,13 @@
                                         <div class="row">
                                             <div class="col col-xs col-40-sm col-40">
                                                 <figure class="hero-image">
-                                                    <img src="image/mobile.png" alt="mobile">
+                                                    <img src="image/Sam121244.png" alt="mobile">
                                                 </figure>
                                             </div>
                                             <div class="col col-xs col-60-sm col-60">
                                                 <div class="hero-text">
-                                                    <div class="hero-title">Lorem Ipsum is simply </div>
-                                                    <div class="hero-description">dummy text of the <br>
+                                                    <div class="hero-title">Mobile phones for Your success </div>
+                                                    <div class="hero-description">dummy text of the 
                                                             printing & typesetting </div>
                                                     <div class="button">
                                                         <i class="icon-ok-circled"></i>
