--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="swiper-slide">
+                                        <div class="row">
+                                            <div class="col col-xs col-40-sm col-40">
+                                                <figure class="hero-image">
+                                                    <img src="image/galaxy-s6-1.png" alt="mobile">
+                                                </figure>
+                                            </div>
+                                            <div class="col col-xs col-60-sm col-60">
+                                                <div class="hero-text">
+                                                    <div class="hero-title">Do What You Can </div>
+                                                    <div class="hero-description">dummy text of the 
+                                                            printing & typesetting </div>
+                                                    <div class="button">
+                                                        <i class="icon-ok-circled"></i>
+                                                        Sign up now
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     
                                 </div>
                                 <!-- Add Arrows -->
